--- a/makefile.msvc
+++ b/makefile.msvc
@@ -5,8 +5,8 @@ APPLICATION_NAME = webmvcpp.exe
 
 INCLUDES = ./3rdparty
 
-CFLAGS = /Ox
-CPPFLAGS = /EHsc /Ox
+CFLAGS = /Ox /DWEBMVCPP_AMALGAMATION
+CPPFLAGS = /EHsc /Ox /DWEBMVCPP_AMALGAMATION
 
 DEBUGFLAGS = /Zi /DEBUG
 
