add /GR- option

--- a/makefile.msvc
+++ b/makefile.msvc
@@ -6,7 +6,7 @@ APPLICATION_NAME = webmvcpp.exe
 INCLUDES = ./3rdparty
 
 CFLAGS = /Ox /DWEBMVCPP_AMALGAMATION
-CPPFLAGS = /EHsc /Ox /DWEBMVCPP_AMALGAMATION
+CPPFLAGS = /EHsc /Ox /GR- /DWEBMVCPP_AMALGAMATION
 
 DEBUGFLAGS = /Zi /DEBUG
 
